<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/ic_action_notification"
        android:title="@string/title_alarm" />

    <item
        android:id="@+id/navigation_member"
        android:icon="@drawable/ic_action_member"
        android:title="@string/title_member" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_action_project"
        android:title="@string/title_project"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_action_calendar"
        android:title="@string/title_calendar"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/title_more"/>
</menu>
